  (required by the XML namespace specification).

* Target parsers show their target object in the ``.target`` property
  (compatible with ElementTree).

* XSLT objects now take XPath object as __call__ stylesheet parameters

* ISO-Schematron support based on the de-facto Schematron reference
  'skeleton implementation'

Bugs fixed
----------

* Invalid XML text characters were not rejected by the API when they
  appeared in unicode strings directly after non-ASCII characters.

* ``lxml.cssselect`` did not distinguish between ``x[attr="val"]`` and
  ``x [attr="val"]`` (with a space).  The latter now matches the
  attribute independent of the element.

* Rewriting multiple links inside of HTML text content could end up
  replacing unrelated content as replacements could impact the
  reported position of subsequent matches.  Modifications are now
  simplified by letting the ``iterlinks()`` generator in ``lxml.html``
  return links in reversed order if they appear inside the same text
  node.  Thus, replacements and link-internal modifications no longer
  change the position of links reported afterwards.

* The ``.value`` attribute of ``textarea`` elements in lxml.html did
  not represent the complete raw value (including child tags etc.). It
  now serialises the complete content on read and replaces the
  complete content by a string on write.

* Target parser didn't call ``.close()`` on the target object if
  parsing failed.  Now it is guaranteed that ``.close()`` will be
  called after parsing, regardless of the outcome.

Other changes
-------------

* ``Element.attrib`` no longer uses a cyclic reference back to its
  Element object.  It therefore no longer requires the garbage
  collector to clean up.

* Static builds include libiconv, in addition to libxml2 and libxslt.


2.2.4 (2009-11-11)
==================

Bugs fixed
----------

* Static build of libxml2/libxslt was broken.


2.2.3 (2009-10-30)
==================

Features added
--------------

Bugs fixed